kube/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  labels:
    app: back
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31081
  type: NodePort
