kube/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  namespace: app-space 
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: wadii10/mcq-back:latest
          imagePullPolicy: Always
          args: ["npm", "start"]
          ports:
            - name: back
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: app-space
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31081
  type: NodePort
