kube/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      nodePort: 31080
  type: NodePort
