kube/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2  # Scale to 2 pods for redundancy
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: front
        image: wadii10/mcq-front:latest
        ports:
        - containerPort: 5000  # Frontend listens on port 80
      - name: back
        image: wadii10/mcq-back:latest
        ports:
        - containerPort: 3000  # Backend listens on port 5000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80  # Service exposes port 80 for external traffic
    targetPort: 80  # Targets port 80 of frontend container
  type: ClusterIP  # Internal service for pod communication
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingressClassName: nginx  # Specify Ingress class (optional)
    nginx.ingress.kubernetes.io/rewrite-target: /  # Rewrite path (optional)
spec:
  rules:
  - host: my-awesome-app.com  # Define your desired hostname
    http:
      paths:
      - pathType: Prefix  # Match all paths under the root
        path: /  
        backend:
          service:
            name: my-app-service
            port:
              number: 80
