kube/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: app-space 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: wadii10/mcq-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /angular-app
              name: front-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: front-cm0
          name: front-cm0
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: app-space 
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  namespace: app-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: angular-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 5000
